--- a/package.json
+++ b/package.json
@@ -3,19 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \" npm run server\" \"next dev\"",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server -w server/db.json -p 3001"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
+    "classnames": "^2.3.1",
+    "clsx": "^1.1.1",
+    "framer-motion": "^6.2.8",
+    "json-server-auth": "^2.1.0",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-input-mask": "^2.0.4",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "@types/node": "17.0.22",
     "@types/react": "17.0.42",
+    "concurrently": "^7.0.0",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.6.2"
